Add email approving, fix various small issues
