# routes.go
@@ -11,6 +11,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/globus303/sportujspolu/middleware"
 	"github.com/globus303/sportujspolu/pkg/events"
+	"github.com/globus303/sportujspolu/pkg/messages"
 	"github.com/globus303/sportujspolu/pkg/user"
 	adapter "github.com/gwatts/gin-adapter"
 	"github.com/joho/godotenv"
@@ -42,21 +43,23 @@ func startRouter(db *sql.DB) {
 	router.Use(adapter.Wrap(cors))
 	v1 := router.Group("/api/v1")
 
+	// User
 	userService := user.NewUserService(db)
 
-	users := v1.Group("/user")
-	users.POST("/register", userService.Register)
-	users.POST("/login", userService.Login)
+	user := v1.Group("/user")
+	user.POST("/register", userService.Register)
+	user.POST("/login", userService.Login)
 
-	protectedUser := users.Group("")
+	protectedUser := user.Group("")
 	protectedUser.Use(middleware.JwtAuth())
 	protectedUser.GET("/me", userService.GetMe)
 	protectedUser.DELETE("/me", userService.DeleteMe)
 
+	// Events
 	eventsService := events.NewEventsService(db)
 
 	events := v1.Group("/events")
-	events.GET("", eventsService.GetEvents)
+	events.GET("", eventsService.GetAllEvents)
 	events.GET("/:eventId", eventsService.GetSingleEvent)
 
 	protectedEvents := events.Group("")
@@ -65,6 +68,15 @@ func startRouter(db *sql.DB) {
 	protectedEvents.POST("", eventsService.CreateEvent)
 	protectedEvents.PUT("/:eventId", eventsService.UpdateEvent)
 	protectedEvents.DELETE("/:eventId", eventsService.DeleteEvent)
+
+	// Messages
+	messagesService := messages.NewMessagesService(db)
+
+	protectedMessages := v1.Group("/messages").Use(middleware.JwtAuth())
+
+	protectedMessages.POST("/email/request", messagesService.SendEmailRequest)
+	protectedMessages.PATCH("/email/:requestId/approve", messagesService.ApproveEmailRequest)
+	protectedMessages.GET("/email/user-requests", messagesService.GetAllEmailRequests)
 
 	//	@Summary Health check
 	//	@Description Returns the status of the server.
